--- a/tModLoader/tModLoadermetaconfig.json
+++ b/tModLoader/tModLoadermetaconfig.json
@@ -19,6 +19,8 @@
 					"password": "Password",
 					"motd": "Motd",
 					"priority": "Priority",
+					"npcstream": "NpcStream",
+					"slowliquids": "Slowliquids",
 					"secure": "Secure"
 				}
 			}
