keywords and cleanup before PR

--- a/tModLoader/tModLoadermetaconfig.json
+++ b/tModLoader/tModLoadermetaconfig.json
@@ -21,7 +21,8 @@
 					"priority": "Priority",
 					"npcstream": "NpcStream",
 					"slowliquids": "Slowliquids",
-					"secure": "Secure"
+					"secure": "Secure",
+					"language": "Language"
 				}
 			}
 		]
