--- a/tModLoader/tModLoaderconfig.json
+++ b/tModLoader/tModLoaderconfig.json
@@ -3,6 +3,7 @@
     {
         "DisplayName": "World Seed",
         "Category": "Terraria Generator settings",
+        "Keywords": "seed new world",
         "Description": "Which world seed to use when generating a new world",
         "FieldName": "Seed",
         "InputType": "text",
@@ -12,6 +13,7 @@
     {
         "DisplayName": "World Size",
         "Category": "Terraria Generator settings",
+        "Keywords": "size new world",
         "Description": "Set the Size of the World",
         "FieldName": "WorldSize",
         "IncludeInCommandLine": false,
@@ -26,6 +28,7 @@
     {
         "DisplayName": "Difficulty",
         "Category": "Terraria Generator settings",
+        "Keywords": "difficulty new world journey expert master",
         "Description": "The difficulty of a newly generated world",
         "FieldName": "Difficulty",
         "InputType": "enum",
@@ -41,6 +44,7 @@
     {
         "DisplayName": "Created World Name",
         "Category": "Terraria Generator settings",
+        "Keywords": "name new world",
         "Description": "How to name the new world",
         "FieldName": "WorldName",
         "InputType": "text",
@@ -50,7 +54,8 @@
     {
         "DisplayName": "Mod Path",
         "Category": "Terraria Mod settings",
-        "Description": "Where tModLoader will read mods from",
+        "Keywords": "folder path mod mods tmodloader",
+        "Description": "Where tModLoader will read mods from. [instructions](https://github.com/jasperfirecai2/amp-templates/wiki/Managing-mods-with-tmodloader)",
         "FieldName": "ModPath",
         "InputType": "text",
         "IncludeInCommandLine": false,
@@ -59,7 +64,8 @@
     {
         "DisplayName": "Mod Pack",
         "Category": "Terraria Mod settings",
-        "Description": "Which modpack to load (needs to be a .json file in <modsfolder>/ModPacks)(does not install mods for you on linux!)",
+        "Keywords": "pack mod mods modpack tmodloader",
+        "Description": "Which modpack to load (does not install mods for you!)",
         "FieldName": "ModPack",
         "InputType": "text",
         "IncludeInCommandLine": false,
@@ -68,6 +74,7 @@
     {
         "DisplayName": "World Path",
         "Category": "Terraria Server settings",
+        "Keywords": "folder path world saves savegame worlds",
         "Description": "The relative path to save worlds in",
         "FieldName": "WorldPath",
         "InputType": "text",
@@ -77,6 +84,7 @@
     {
         "DisplayName": "World Name",
         "Category": "Terraria Server settings",
+        "Keywords": "name world worldname load boot",
         "Description": "Which world to load on boot",
         "FieldName": "World",
         "InputType": "text",
@@ -86,6 +94,7 @@
     {
         "DisplayName": "Max Players",
         "Category": "Terraria Server settings",
+        "Keywords": "players max maximum",
         "Description": "The maximum players in the server",
         "FieldName": "$MaxUsers",
         "InputType": "number",
@@ -95,6 +104,7 @@
     {
         "DisplayName": "Password",
         "Category": "Terraria Server settings",
+        "Keywords": "password pw security",
         "Description": "The password players must enter to join",
         "FieldName": "Password",
         "InputType": "password",
@@ -104,15 +114,39 @@
     {
         "DisplayName": "Motd",
         "Category": "Terraria Server settings",
-        "Description": "The motto of the day",
+        "Keywords": "motd motto message welcome",
+        "Description": "The motto/message of the day",
         "FieldName": "Motd",
         "InputType": "text",
         "IncludeInCommandLine": false,
         "DefaultValue": "Welcome!"
     },
     {
+        "DisplayName": "Language",
+        "Category": "Terraria Server settings",
+        "Keywords": "language lang",
+        "Description": "The language of your server",
+        "FieldName": "Language",
+        "InputType": "enum",
+        "EnumValues": {
+            "en-US": "English",
+            "de-DE": "German",
+            "it-IT": "Italian",
+            "fr-FR": "French",
+            "es-ES": "Spanish",
+            "ru-RU": "Russian",
+            "zh-Hans": "Chinese",
+            "pt-PT": "Portuguese",
+            "pt-BR": "Portuguese (Brazil)",
+            "pl-PL": "Polish"
+        },
+        "IncludeInCommandLine": false,
+        "DefaultValue": "en-US"
+    },
+    {
         "DisplayName": "Priority",
         "Category": "Terraria Server settings",
+        "Keywords": "priority process prio performance",
         "Description": "The process priority",
         "FieldName": "Priority",
         "InputType": "enum",
@@ -130,6 +164,7 @@
     {
         "DisplayName": "NPC Stream",
         "Category": "Terraria Server settings",
+        "Keywords": "npc stream skipping lag bandwidth performance",
         "Description": "Reduces enemy skipping but increases bandwidth usage. The lower the number the less skipping will happen, but more data is sent. 0 is off.",
         "FieldName": "NpcStream",
         "InputType": "number",
@@ -139,6 +174,7 @@
     {
         "DisplayName": "Slower liquids",
         "Category": "Terraria Server settings",
+        "Keywords": "slow liquid liquids slower lag performance",
         "Description": "Reduces maximum liquids moving at the same time. If enabled may reduce lags but liquids may take longer to settle.",
         "FieldName": "Slowliquids",
         "InputType": "enum",
@@ -152,6 +188,7 @@
     {
         "DisplayName": "Cheat Protection",
         "Category": "Terraria Server settings",
+        "Keywords": "security cheat cheats auto kick spam",
         "Description": "Enable/Disable additional cheat protection",
         "FieldName": "Secure",
         "InputType": "enum",
