Add blank serverconfig to fetch for merging Add default values to seed and pw to fix template merging Shorten journey mode settings category name Fix config template missing fields

--- a/Terraria/Terrariaconfig.json
+++ b/Terraria/Terrariaconfig.json
@@ -8,7 +8,7 @@
         "FieldName": "Seed",
         "InputType": "text",
         "IncludeInCommandLine": false,
-        "DefaultValue": ""
+        "DefaultValue": "PoweredbyAMP"
     },
     {
         "DisplayName": "World Size",
@@ -89,7 +89,7 @@
         "FieldName": "Password",
         "InputType": "password",
         "IncludeInCommandLine": false,
-        "DefaultValue": ""
+        "DefaultValue": "password123"
     },
     {
         "DisplayName": "Motd",
@@ -205,7 +205,7 @@
     },
     {
         "DisplayName": "Freeze time",
-        "Category": "Terraria Journey Permission settings",
+        "Category": "Terraria Journey Permissions",
         "Keywords": "journey mode permissions power freeze time stop clock",
         "Description": "Journey mode (1.4+ difficulty) power permissions for every individual power. Host is only relevant when using steam integration",
         "FieldName": "time_setfrozen",
@@ -220,7 +220,7 @@
     },
     {
         "DisplayName": "Set to Dawn",
-        "Category": "Terraria Journey Permission settings",
+        "Category": "Terraria Journey Permissions",
         "Keywords": "journey mode permissions power dawn time clock",
         "FieldName": "time_setdawn",
         "InputType": "enum",
@@ -234,7 +234,7 @@
     },
     {
         "DisplayName": "Set to Noon",
-        "Category": "Terraria Journey Permission settings",
+        "Category": "Terraria Journey Permissions",
         "Keywords": "journey mode permissions power noon time clock",
         "FieldName": "time_setnoon",
         "InputType": "enum",
@@ -248,7 +248,7 @@
     },
     {
         "DisplayName": "Set to Dusk",
-        "Category": "Terraria Journey Permission settings",
+        "Category": "Terraria Journey Permissions",
         "Keywords": "journey mode permissions power dusk time clock",
         "FieldName": "time_setdusk",
         "InputType": "enum",
@@ -262,7 +262,7 @@
     },
     {
         "DisplayName": "Set to Midnight",
-        "Category": "Terraria Journey Permission settings",
+        "Category": "Terraria Journey Permissions",
         "Keywords": "journey mode permissions power midnight time clock",
         "FieldName": "time_setmidnight",
         "InputType": "enum",
@@ -276,7 +276,7 @@
     },
     {
         "DisplayName": "God Mode",
-        "Category": "Terraria Journey Permission settings",
+        "Category": "Terraria Journey Permissions",
         "Keywords": "journey mode permissions power god godmode",
         "FieldName": "godmode",
         "InputType": "enum",
@@ -290,7 +290,7 @@
     },
     {
         "DisplayName": "Set wind intensity",
-        "Category": "Terraria Journey Permission settings",
+        "Category": "Terraria Journey Permissions",
         "Keywords": "journey mode permissions power wind set strength",
         "FieldName": "wind_setstrength",
         "InputType": "enum",
@@ -304,7 +304,7 @@
     },
     {
         "DisplayName": "Set rain intensity",
-        "Category": "Terraria Journey Permission settings",
+        "Category": "Terraria Journey Permissions",
         "Keywords": "journey mode permissions power rain set strength",
         "FieldName": "rain_setstrength",
         "InputType": "enum",
@@ -318,7 +318,7 @@
     },
     {
         "DisplayName": "Change game speed",
-        "Category": "Terraria Journey Permission settings",
+        "Category": "Terraria Journey Permissions",
         "Keywords": "journey mode permissions power speed time speedup",
         "FieldName": "time_setspeed",
         "InputType": "enum",
@@ -332,7 +332,7 @@
     },
     {
         "DisplayName": "Lock rain conditions",
-        "Category": "Terraria Journey Permission settings",
+        "Category": "Terraria Journey Permissions",
         "Keywords": "journey mode permissions power rain lock freeze",
         "FieldName": "rain_setfrozen",
         "InputType": "enum",
@@ -346,7 +346,7 @@
     },
     {
         "DisplayName": "Lock Wind conditions",
-        "Category": "Terraria Journey Permission settings",
+        "Category": "Terraria Journey Permissions",
         "Keywords": "journey mode permissions power wind lock freeze",
         "FieldName": "wind_setfrozen",
         "InputType": "enum",
@@ -360,7 +360,7 @@
     },
     {
         "DisplayName": "Placement Range",
-        "Category": "Terraria Journey Permission settings",
+        "Category": "Terraria Journey Permissions",
         "Keywords": "journey mode permissions power placement range reach tile",
         "FieldName": "increaseplacementrange",
         "InputType": "enum",
@@ -374,7 +374,7 @@
     },
     {
         "DisplayName": "Difficulty changing",
-        "Category": "Terraria Journey Permission settings",
+        "Category": "Terraria Journey Permissions",
         "Keywords": "journey mode permissions power difficulty",
         "FieldName": "setdifficulty",
         "InputType": "enum",
@@ -388,7 +388,7 @@
     },
     {
         "DisplayName": "Biome/Evil Spreading",
-        "Category": "Terraria Journey Permission settings",
+        "Category": "Terraria Journey Permissions",
         "Keywords": "journey mode permissions power evil spread biome crimson hallow corrupted",
         "FieldName": "biomespread_setfrozen",
         "InputType": "enum",
@@ -402,7 +402,7 @@
     },
     {
         "DisplayName": "Spawn Rate",
-        "Category": "Terraria Journey Permission settings",
+        "Category": "Terraria Journey Permissions",
         "Keywords": "journey mode permissions power spawn rate",
         "FieldName": "setspawnrate",
         "InputType": "enum",
