--- a/Terraria/tModLoaderconfig.json
+++ b/Terraria/tModLoaderconfig.json
@@ -8,7 +8,7 @@
         "FieldName": "Seed",
         "InputType": "text",
         "IncludeInCommandLine": false,
-        "DefaultValue": "PoweredbyAMP"
+        "DefaultValue": ""
     },
     {
         "DisplayName": "World Size",
@@ -109,7 +109,7 @@
         "FieldName": "Password",
         "InputType": "password",
         "IncludeInCommandLine": false,
-        "DefaultValue": "password123"
+        "DefaultValue": ""
     },
     {
         "DisplayName": "Motd",
