--- a/Terraria/Terrariaconfig.json
+++ b/Terraria/Terrariaconfig.json
@@ -6,8 +6,8 @@
         "Keywords": "seed new world",
         "Description": "Which world seed to use when generating a new world",
         "FieldName": "Seed",
-        "PlaceHolder": "PoweredByAMP",
-        "Suffix": "",
+        "placeholder": "PoweredByAMP",
+        "suffix": "",
         "InputType": "text",
         "IncludeInCommandLine": false,
         "DefaultValue": ""
@@ -49,8 +49,8 @@
         "Keywords": "name new world",
         "Description": "How to name the new world",
         "FieldName": "WorldName",
-        "PlaceHolder": "world",
-        "Suffix": "",
+        "placeholder": "world",
+        "suffix": "",
         "InputType": "text",
         "IncludeInCommandLine": false,
         "DefaultValue": "world"
@@ -61,8 +61,8 @@
         "Keywords": "folder path world saves savegame worlds",
         "Description": "The relative path to save worlds in",
         "FieldName": "WorldPath",
-        "PlaceHolder": "Worlds",
-        "Suffix": "",
+        "placeholder": "Worlds",
+        "suffix": "",
         "InputType": "text",
         "IncludeInCommandLine": false,
         "DefaultValue": "Worlds"
@@ -73,8 +73,8 @@
         "Keywords": "name world worldname load boot",
         "Description": "Which world to load on boot",
         "FieldName": "World",
-        "PlaceHolder": "Worlds/world.wld",
-        "Suffix": "",
+        "placeholder": "Worlds/world.wld",
+        "suffix": "",
         "InputType": "text",
         "IncludeInCommandLine": false,
         "DefaultValue": "Worlds/world.wld"
@@ -85,8 +85,8 @@
         "Keywords": "players max maximum",
         "Description": "The maximum players in the server",
         "FieldName": "$MaxUsers",
-        "PlaceHolder": "8",
-        "Suffix": "Users",
+        "placeholder": "8",
+        "suffix": "Users",
         "InputType": "number",
         "IncludeInCommandLine": false,
         "DefaultValue": 8
@@ -97,8 +97,8 @@
         "Keywords": "password pw security",
         "Description": "The password players must enter to join",
         "FieldName": "Password",
-        "PlaceHolder": "Password123",
-        "Suffix": "",
+        "placeholder": "Password123",
+        "suffix": "",
         "InputType": "password",
         "IncludeInCommandLine": false,
         "DefaultValue": ""
@@ -109,8 +109,8 @@
         "Keywords": "motd motto message welcome",
         "Description": "The motto/message of the day",
         "FieldName": "Motd",
-        "PlaceHolder": "Welcome!",
-        "Suffix": "",
+        "placeholder": "Welcome!",
+        "suffix": "",
         "InputType": "text",
         "IncludeInCommandLine": false,
         "DefaultValue": "Welcome!"
@@ -161,8 +161,8 @@
         "Keywords": "npc stream skipping lag bandwidth performance",
         "Description": "Reduces enemy skipping but increases bandwidth usage. The lower the number the less skipping will happen, but more data is sent. 0 is off.",
         "FieldName": "NpcStream",
-        "PlaceHolder": "60",
-        "Suffix": "",
+        "placeholder": "60",
+        "suffix": "",
         "InputType": "number",
         "IncludeInCommandLine": false,
         "DefaultValue": 60
@@ -215,8 +215,8 @@
         "Keywords": "announcement box range griefing",
         "Description": "Sets the announcement box text messaging range in pixels, -1 for serverwide announcements.",
         "FieldName": "AnnouncementBoxRange",
-        "PlaceHolder": "-1",
-        "Suffix": "Pixels",
+        "placeholder": "-1",
+        "suffix": "Pixels",
         "InputType": "number",
         "IncludeInCommandLine": false,
         "DefaultValue": "-1"
