--- a/Terraria/tModLoaderconfig.json
+++ b/Terraria/tModLoaderconfig.json
@@ -6,8 +6,8 @@
         "Keywords": "seed new world",
         "Description": "Which world seed to use when generating a new world",
         "FieldName": "Seed",
-        "PlaceHolder": "PoweredByAMP",
-        "Suffix": "",
+        "placeholder": "PoweredByAMP",
+        "suffix": "",
         "InputType": "text",
         "IncludeInCommandLine": false,
         "DefaultValue": ""
@@ -49,8 +49,8 @@
         "Keywords": "name new world",
         "Description": "How to name the new world",
         "FieldName": "WorldName",
-        "PlaceHolder": "World",
-        "Suffix": "",
+        "placeholder": "World",
+        "suffix": "",
         "InputType": "text",
         "IncludeInCommandLine": false,
         "DefaultValue": "world"
@@ -61,8 +61,8 @@
         "Keywords": "folder path mod mods tmodloader",
         "Description": "Where tModLoader will read mods from. [instructions](https://github.com/jasperfirecai2/amp-templates/wiki/Managing-mods-with-tmodloader)",
         "FieldName": "ModPath",
-        "PlaceHolder": "ModLoader/Mods",
-        "Suffix": "",
+        "placeholder": "ModLoader/Mods",
+        "suffix": "",
         "InputType": "text",
         "IncludeInCommandLine": false,
         "DefaultValue": "ModLoader/Mods"
@@ -73,8 +73,8 @@
         "Keywords": "pack mod mods modpack tmodloader",
         "Description": "Which modpack to load (does not install mods for you!)",
         "FieldName": "ModPack",
-        "PlaceHolder": "modpack",
-        "Suffix": ".json",
+        "placeholder": "modpack",
+        "suffix": ".json",
         "InputType": "text",
         "IncludeInCommandLine": false,
         "DefaultValue": ""
@@ -85,8 +85,8 @@
         "Keywords": "folder path world saves savegame worlds",
         "Description": "The relative path to save worlds in",
         "FieldName": "WorldPath",
-        "PlaceHolder": "ModLoader/Worlds",
-        "Suffix": "",
+        "placeholder": "ModLoader/Worlds",
+        "suffix": "",
         "InputType": "text",
         "IncludeInCommandLine": false,
         "DefaultValue": "ModLoader/Worlds"
@@ -97,8 +97,8 @@
         "Keywords": "name world worldname load boot",
         "Description": "Which world to load on boot",
         "FieldName": "World",
-        "PlaceHolder": "ModLoader/Worlds/world.wld",
-        "Suffix": "",
+        "placeholder": "ModLoader/Worlds/world.wld",
+        "suffix": "",
         "InputType": "text",
         "IncludeInCommandLine": false,
         "DefaultValue": "ModLoader/Worlds/world.wld"
@@ -109,8 +109,8 @@
         "Keywords": "players max maximum",
         "Description": "The maximum players in the server",
         "FieldName": "$MaxUsers",
-        "PlaceHolder": "8",
-        "Suffix": "Users",
+        "placeholder": "8",
+        "suffix": "Users",
         "InputType": "number",
         "IncludeInCommandLine": false,
         "DefaultValue": 8
@@ -121,8 +121,8 @@
         "Keywords": "password pw security",
         "Description": "The password players must enter to join",
         "FieldName": "Password",
-        "PlaceHolder": "Password123",
-        "Suffix": "",
+        "placeholder": "Password123",
+        "suffix": "",
         "InputType": "password",
         "IncludeInCommandLine": false,
         "DefaultValue": ""
@@ -133,8 +133,8 @@
         "Keywords": "motd motto message welcome",
         "Description": "The motto/message of the day",
         "FieldName": "Motd",
-        "PlaceHolder": "Welcome!",
-        "Suffix": "",
+        "placeholder": "Welcome!",
+        "suffix": "",
         "InputType": "text",
         "IncludeInCommandLine": false,
         "DefaultValue": "Welcome!"
@@ -185,8 +185,8 @@
         "Keywords": "npc stream skipping lag bandwidth performance",
         "Description": "Reduces enemy skipping but increases bandwidth usage. The lower the number the less skipping will happen, but more data is sent. 0 is off.",
         "FieldName": "NpcStream",
-        "PlaceHolder": "60",
-        "Suffix": "",
+        "placeholder": "60",
+        "suffix": "",
         "InputType": "number",
         "IncludeInCommandLine": false,
         "DefaultValue": 60
@@ -239,8 +239,8 @@
         "Keywords": "announcement box range griefing",
         "Description": "Sets the announcement box text messaging range in pixels, -1 for serverwide announcements.",
         "FieldName": "AnnouncementBoxRange",
-        "PlaceHolder": "-1",
-        "Suffix": "Pixels",
+        "placeholder": "-1",
+        "suffix": "Pixels",
         "InputType": "number",
         "IncludeInCommandLine": false,
         "DefaultValue": "-1"
