--- a/Terraria/Terrariaconfig.json
+++ b/Terraria/Terrariaconfig.json
@@ -171,7 +171,7 @@
         "DisplayName": "Slower Liquids",
         "Category": "Terraria Server settings",
         "Keywords": "slow liquid liquids slower lag performance",
-        "Description": "Reduces maximum liquids moving at the same time. If enabled may reduce lags but liquids may take longer to settle.",
+        "Description": "Reduces maximum liquids moving at the same time. If enabled may reduce lag but liquids may take longer to settle.",
         "FieldName": "Slowliquids",
         "InputType": "checkbox",
         "IncludeInCommandLine": false,
